--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -163,16 +163,16 @@
                         <tbody>
                             {% for d in data %}
                             <tr>      
-                                <td>{{ d.nombre }}</td>
-                                <td>{{ d.apellido }}</td>
-                                <td>{{ d.email }}</td>
+                                <td>{{ d.nombre.title() }}</td>
+                                <td>{{ d.apellido.title() }}</td>
+                                <td>{{ d.email.title() }}</td>
                                 <td>{{ d.telefono }}</td>
                                 <td>{{ d.fecha_nacimiento.strftime('%d/%m/%Y') }}</td>
                                 <td>{{ d.fecha_inicio.strftime('%d/%m/%Y') }}</td>
-                                <td>{{ d.colegio }}</td>
+                                <td>{{ d.colegio.title() }}</td>
                                 <td>{{ d.curso }}</td>
                                 <td>{{ d.nivel_educativo }}</td>
-                                <td>{{ d.nombre_titular }}</td>
+                                <td>{{ d.nombre_titular.title() }}</td>
                                 <td>{{ d.telefono_titular }}</td>
                                 <td>{{ d.dia }}</td>
                                 <td>{{ d.horario }}</td>
@@ -183,8 +183,7 @@
                                 <td class="text-center">
                                      <i class="btn-operacion bi bi bi-trash "id="confirmarEliminar{{d.id}}" data-bs-toggle="modal" data-bs-target="#confirmarEliminar{{d.id}}"data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar"></i></td>                         
                                 </td>
-                               
-        
+
                             </tr>
                             <!-- Modal de confirmación de eliminación para cada alumno -->
                             <div class="modal fade" id="confirmarEliminar{{d.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -228,7 +227,7 @@
                                                     </div>
                                                     <div class="col-3">
                                                         <label>Telefono <span class="campo-obligatorio">*</span></label>
-                                                        <input type="text" class="form-control mb-3" name="telefono" value="{{ d.telefono }}" required>
+                                                        <input type="tel" class="form-control mb-3" name="telefono" maxlength="10" value="{{ d.telefono }}" required>
                                                     </div>
                                                 </div>
                                                 <div class="row">
@@ -280,7 +279,7 @@
                                                     </div>
                                                     <div class="col-3">
                                                         <label>Telefono tutor <span class="campo-obligatorio">*</span></label>
-                                                        <input type="text" class="form-control mb-3" name="telefono_titular" value="{{ d.telefono_titular }}" required>
+                                                        <input type="tel" class="form-control mb-3" name="telefono_titular" maxlength="10" value="{{ d.telefono_titular }}" required>
                                                     </div>
                                                     <div class="col-md-3">
                                                         <label class="label-with-arrow">
